--- a/content/week1.html
+++ b/content/week1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a><li><a href='week5.html'>week5</a><li class='has-children'><a href='week6.html'>week6</a><ul class='dropdown'><li><a href='設計理想.html'>設計理想</a><li><a href='創建協同.html'>創建協同</a></li></ul><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a><li><a href='week10.html'>week10</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week << <a href='week.html'>Previous</a> <a href='week2.html'>Next</a> >> week2<br /><h1>week1</h1>
+    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='week2.html'>Next</a> >> week2<br /><h1>week1</h1>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage1-ag1</span></p>
@@ -147,7 +147,7 @@ img.add_border {
 <li><span>請在各組組長的 Github 帳號下建立各組的分組網站, 惟在 W1 進行各班定組序過程中, 發現即便採用 Ethercalc 以網際協同方式同步讓各班自選組員填入兩兩成組的學員學號, 但仍缺人工或自動定各班組序的有效方案, 在此責成各組在進行自選的協同產品開發項目之際 (W2-W4), 將此議題列為必選的題目之一, 詳細說明各組認為最有效率的第一階段與訂定組序的方法及流程.</span></li>
 <li><span>此外, 為了讓各組在 stage1 分組協同實習過程, 能透過網誌發表各組組員在 W2-W4 過程中的各項作為與心得報告, 說明可利用 Leo Editor 協助 CMSiMDE 中的 Pelican 發表協同網誌, 其目的是讓各分組在協同期間, 能完整呈現各階段所留下的網誌紀錄. 但此方式必須熟悉 Leo Editor 的操作, 因此有關透過 Pelican 建立協同網誌一事, 除利用 Leo Editor 協助設定並建立 pelican 網誌外, 也將此議題列為各組在 Stage1 協同產品設計流程中必選題目之二, 請各組詳細說明採用或不採用 Leo Editor 的兩種情況下, 各組員在設定與建立協同網誌的過程所可能遭遇或產生的問題與解決方案.</span></li>
 </ol>
-<br />week << <a href='week.html'>Previous</a> <a href='week2.html'>Next</a> >> week2</div>
+<br />stage1 << <a href='stage1.html'>Previous</a> <a href='week2.html'>Next</a> >> week2</div>
         
     <!-- footer -->
       <div class="container">
