--- a/content/week7.html
+++ b/content/week7.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a><li><a href='week5.html'>week5</a><li class='has-children'><a href='week6.html'>week6</a><ul class='dropdown'><li><a href='設計理想.html'>設計理想</a><li><a href='創建協同.html'>創建協同</a></li></ul><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a><li><a href='week10.html'>week10</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,13 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">創建協同 << <a href='創建協同.html'>Previous</a> <a href='week8.html'>Next</a> >> week8<br /><h1>week7</h1>
+    <div id="tipue_search_content">week6 << <a href='week6.html'>Previous</a> <a href='week8.html'>Next</a> >> week8<br /><h1>week7</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
 <p>模擬失敗 </p>
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
 <p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
 <p><img alt="" height="425" src="./../images/44085.jpg" width="239"/>   <img alt="" height="239" src="./../images/messageImage_1618473034644.jpg" width="302"/></p>
-<br />創建協同 << <a href='創建協同.html'>Previous</a> <a href='week8.html'>Next</a> >> week8</div>
+<br />week6 << <a href='week6.html'>Previous</a> <a href='week8.html'>Next</a> >> week8</div>
         
     <!-- footer -->
       <div class="container">
