--- a/content/week10.html
+++ b/content/week10.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a><li><a href='week5.html'>week5</a><li class='has-children'><a href='week6.html'>week6</a><ul class='dropdown'><li><a href='設計理想.html'>設計理想</a><li><a href='創建協同.html'>創建協同</a></li></ul><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a><li><a href='week10.html'>week10</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,14 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week6 << <a href='week6.html'>Previous</a> <a href='創建協同.html'>Next</a> >> 創建協同<br /><h1>設計理想</h1>
-<ol>
-<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
-<li>使用類似螺紋的概念把球輸送到想要的平台</li>
-<li>希望可以把球的軌跡沿著螺旋線上升</li>
-<li>做成一個循迴機構</li>
-</ol>
-<br />week6 << <a href='week6.html'>Previous</a> <a href='創建協同.html'>Next</a> >> 創建協同</div>
+    <div id="tipue_search_content">week9 << <a href='week9.html'>Previous</a> <br /><h1>week10</h1>
+<p></p>
+<p></p><br />week9 << <a href='week9.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
