--- a/content/week4.html
+++ b/content/week4.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li class='has-children'><a href='week3.html'>week3</a><ul class='dropdown'><li><a href='機構 程式.html'>機構 程式</a><li><a href='改良.html'>改良</a></li></ul><li><a href='week4.html'>week4</a><li><a href='week5.html'>week5</a><li class='has-children'><a href='week6.html'>week6</a><ul class='dropdown'><li><a href='設計理想.html'>設計理想</a><li><a href='創建協同.html'>創建協同</a></li></ul><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a><li><a href='week10.html'>week10</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">改良 << <a href='改良.html'>Previous</a> <a href='week5.html'>Next</a> >> week5<br /><h1>week4</h1>
+    <div id="tipue_search_content">week3 << <a href='week3.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>week4</h1>
 <p>1.工程圖</p>
 <p><img alt="" height="402" src="./../images/Inventor_9Oy4NiufCt.png" width="571"/></p>
 <p></p>
@@ -142,7 +142,7 @@ img.add_border {
 <p></p>
 <p>3.完成品</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
-<br />改良 << <a href='改良.html'>Previous</a> <a href='week5.html'>Next</a> >> week5</div>
+<br />week3 << <a href='week3.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
         
     <!-- footer -->
       <div class="container">
