CoppeliaSim模擬與運送機構創建

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,8 +3,9 @@
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
 <p><span>Stage2</span></p>
-<p><span><br/><span>分組倉儲:stage1 ag6</span></span></p>
-<p><br/><br/><br/><span lang="en"></span></p>
+<p><span><span>分組倉儲: <a href="https://40823111.github.io/stage2-ag6/content/index.html">stage2 ag6</a></span></span></p>
+<p>Stage3</p>
+<p><br/><span>分組倉儲: stage3 ag5</span><br/><br/><span lang="en"></span></p>
 <p></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
@@ -116,7 +117,8 @@ git push</pre>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
 <h4>改良</h4>
 <p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
-<p></p><h3>week4</h3>
+<p></p>
+<h3>week4</h3>
 <p>1.工程圖</p>
 <p><img alt="" height="402" src="/images/Inventor_9Oy4NiufCt.png" width="571"/></p>
 <p></p>
@@ -152,6 +154,30 @@ git push</pre>
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
 <p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
 <p><img alt="" height="425" src="/images/44085.jpg" width="239"/>   <img alt="" height="239" src="/images/messageImage_1618473034644.jpg" width="302"/></p>
+<h1>CoppeliaSim模擬與運送機構創建</h1>
+<p>整體運用重點:</p>
+<ol>
+<li>向本週主軸:CoppeliaSim模擬與運送機構創建</li>
+</ol>
+<p>整體運用重點:</p>
+<ol>
+<li>IK逆運動學</li>
+<li>正向運動學</li>
+<li>送球機構創建</li>
+</ol>
+<p>本週問題:</p>
+<ol>
+<li>多軸手臂的運動預測</li>
+<li>送球機構創建未果</li>
+<li>球受力後的運動路徑預測</li>
+</ol>
+<p>問題改善:</p>
+<ol>
+<li>藉由DH法做運動預期</li>
+<li>加入運動學運算</li>
+</ol>
+
+
 <h3>week8</h3>
 <p>手套 </p>
 <h3>week9</h3>
