CoppeliaSim模擬與運送機構創建1

--- a/content/week7.html
+++ b/content/week7.html
@@ -139,6 +139,28 @@ img.add_border {
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
 <p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
 <p><img alt="" height="425" src="./../images/44085.jpg" width="239"/>   <img alt="" height="239" src="./../images/messageImage_1618473034644.jpg" width="302"/></p>
+<h4>CoppeliaSim模擬與運送機構創建</h4>
+<p>整體運用重點:</p>
+<ol>
+<li>向本週主軸:CoppeliaSim模擬與運送機構創建</li>
+</ol>
+<p>整體運用重點:</p>
+<ol>
+<li>IK逆運動學</li>
+<li>正向運動學</li>
+<li>送球機構創建</li>
+</ol>
+<p>本週問題:</p>
+<ol>
+<li>多軸手臂的運動預測</li>
+<li>送球機構創建未果</li>
+<li>球受力後的運動路徑預測</li>
+</ol>
+<p>問題改善:</p>
+<ol>
+<li>藉由DH法做運動預期</li>
+<li>加入運動學運算</li>
+</ol>
 <br />week6 << <a href='week6.html'>Previous</a> <a href='week8.html'>Next</a> >> week8</div>
         
     <!-- footer -->
