--- a/content/Introduction.html
+++ b/content/Introduction.html
@@ -138,8 +138,9 @@ img.add_border {
 <pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr"><span lang="en">Website:<a href="https://40823111.github.io/cd2021/.">許耀中的</a></span><a href="https://40823111.github.io/cd2021/."><span lang="en">Website</span></a></pre>
 <p><br/><br/>Youtube:<a href="https://studio.youtube.com/channel/UCDwHWerqlhllVN1FmKCBYJg/videos/upload?filter=%5B%5D&amp;sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D">許耀中的Youtube</a><br/><br/>Stage1<br/><br/>分組倉儲: <a href="https://40823111.github.io/stage1-ag6/content/index.html">stage1 ag6</a></p>
 <p><span>Stage2</span></p>
-<p><span><br/><span>分組倉儲:stage1 ag6</span></span></p>
-<p><br/><br/><br/><span lang="en"></span></p>
+<p><span><span>分組倉儲: <a href="https://40823111.github.io/stage2-ag6/content/index.html">stage2 ag6</a></span></span></p>
+<p>Stage3</p>
+<p><br/><span>分組倉儲: stage3 ag5</span><br/><br/><span lang="en"></span></p>
 <p></p>
 <br /> <a href='leo.html'>Next</a> >> leo</div>
         
