--- a/content/week3.html
+++ b/content/week3.html
@@ -142,7 +142,8 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
 <h4>改良</h4>
 <p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
-<p></p><br />week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4</div>
+<p></p>
+<br />week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4</div>
         
     <!-- footer -->
       <div class="container">
