--- a/content/stage3.html
+++ b/content/stage3.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1<br /><h1>week</h1>
-<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">week9 << <a href='week9.html'>Previous</a> <a href='week10.html'>Next</a> >> week10<br /><h1>stage3</h1>
+<br />week9 << <a href='week9.html'>Previous</a> <a href='week10.html'>Next</a> >> week10</div>
         
     <!-- footer -->
       <div class="container">
