--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -177,7 +177,18 @@ git push</pre>
 <li>加入運動學運算</li>
 </ol>
 <h3>week8</h3>
-<p>手套 </p>
+<h4>送球機構</h4>
+<p>問題1 : <span>球進不去 只能靠後面球的推力才可以勉強塞進去</span></p>
+<p></p>
+<p></p>
+<p></p>
+<p><span>問題2. 球進去後機構也沒辦法把球推上去 因為斜角太斜導致球會網協度相對小的地方(入口)滾動</span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span>改善: 斜度改小 把凹槽加長 使凹槽和倒角之間有一個倒三角形可以讓球跑到裡面卡住 不會往後滾</span></p>
 <h3>week9</h3>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
@@ -185,5 +196,14 @@ git push</pre>
 <p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt</a></p>
 <h2>stage3</h2>
 <h3>week10</h3>
+<h4>task1</h4>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
+<p><span></span></p>
+<h4>task2</h4>
+<p></p>
+<h3>week11</h3>
+<h4>task3</h4>
+<p>影片直播</p>
+<p></p>
 <p></p>
 <p></p>
