--- a/config/content.htm
+++ b/config/content.htm
@@ -200,8 +200,8 @@ git push</pre>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
 <p><span></span></p>
 <h4>task2</h4>
-<p></p>
-<h3>week11</h3>
+<p><span>採 Python remote API 進行操控</span></p>
+<p><span></span></p><h3>week11</h3>
 <h4>task3</h4>
 <p>影片直播</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
