--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,7 +5,7 @@
 <p><span>Stage2</span></p>
 <p><span><span>分組倉儲: <a href="https://40823111.github.io/stage2-ag6/content/index.html">stage2 ag6</a></span></span></p>
 <p>Stage3</p>
-<p><br/><span>分組倉儲: stage3 ag5</span><br/><br/><span lang="en"></span></p>
+<p><br/><span>分組倉儲: <a href="https://40823111.github.io/stage3-ag5/">stage3 ag5</a></span><br/><br/><span lang="en"></span></p>
 <p></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
@@ -200,7 +200,8 @@ git push</pre>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
 <p><span></span></p>
 <h4>task2</h4>
-<p></p>
+<p><span>採 Python remote API 進行操控</span></p>
+<p><span></span></p>
 <h3>week11</h3>
 <h4>task3</h4>
 <p>影片直播</p>
