--- a/content/Introduction.html
+++ b/content/Introduction.html
@@ -140,7 +140,7 @@ img.add_border {
 <p><span>Stage2</span></p>
 <p><span><span>分組倉儲: <a href="https://40823111.github.io/stage2-ag6/content/index.html">stage2 ag6</a></span></span></p>
 <p>Stage3</p>
-<p><br/><span>分組倉儲: stage3 ag5</span><br/><br/><span lang="en"></span></p>
+<p><br/><span>分組倉儲: <a href="https://40823111.github.io/stage3-ag5/">stage3 ag5</a></span><br/><br/><span lang="en"></span></p>
 <p></p>
 <br /> <a href='leo.html'>Next</a> >> leo</div>
         
