--- a/config/content.htm
+++ b/config/content.htm
@@ -5,7 +5,7 @@
 <p><span>Stage2</span></p>
 <p><span><span>分組倉儲: <a href="https://40823111.github.io/stage2-ag6/content/index.html">stage2 ag6</a></span></span></p>
 <p>Stage3</p>
-<p><br/><span>分組倉儲: stage3 ag5</span><br/><br/><span lang="en"></span></p>
+<p><br/><span>分組倉儲: <a href="https://40823111.github.io/stage3-ag5/">stage3 ag5</a></span><br/><br/><span lang="en"></span></p>
 <p></p>
 <h1>leo</h1>
 <h2>edit blog</h2>
@@ -201,7 +201,9 @@ git push</pre>
 <p><span></span></p>
 <h4>task2</h4>
 <p><span>採 Python remote API 進行操控</span></p>
-<p><span></span></p><h3>week11</h3>
+<p><span></span></p>
+<p><span></span></p>
+<h3>week11</h3>
 <h4>task3</h4>
 <p>影片直播</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
