--- a/content/week10.html
+++ b/content/week10.html
@@ -139,7 +139,9 @@ img.add_border {
 <p><span></span></p>
 <h4>task2</h4>
 <p><span>採 Python remote API 進行操控</span></p>
-<p><span></span></p><br />stage3 << <a href='stage3.html'>Previous</a> <a href='week11.html'>Next</a> >> week11</div>
+<p><span></span></p>
+<p><span></span></p>
+<br />stage3 << <a href='stage3.html'>Previous</a> <a href='week11.html'>Next</a> >> week11</div>
         
     <!-- footer -->
       <div class="container">
