--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -202,10 +202,17 @@ git push</pre>
 <p><span>採 Python remote API 進行操控</span></p>
 <p><span></span></p>
 <p><span>step1  </span></p>
+<p><span>先把5個檔案放在同一個資料夾</span></p>
 <p><span></span></p>
+<p><span><img alt="" height="149" src="/images/1621441859591.jpg" width="566"/></span></p>
+<p><span>step2</span></p>
+<p><span>打開CoppliaSim(4.2.0)把你要的檔案丟進去  </span></p>
+<p><span><img alt="" height="408" src="/images/1621441935131.jpg" width="564"/></span></p>
 <p><span></span></p>
-<p><span></span></p>
-<p><span></span></p><h2>week11</h2>
+<p><span></span>step3</p>
+<p><span>把程式複製放在主體的上面(如果沒有可以自己新增)</span></p>
+<p><img alt="" height="418" src="/images/1621442379740.jpg" width="288"/></p>
+<p></p><h2>week11</h2>
 <h3>task3</h3>
 <p>影片直播</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
