--- a/content/week12.html
+++ b/content/week12.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>week11</h1>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
+    <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='topic.html'>Next</a> >> topic<br /><h1>week12</h1>
+<br />task3 << <a href='task3.html'>Previous</a> <a href='topic.html'>Next</a> >> topic</div>
         
     <!-- footer -->
       <div class="container">
