--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -270,9 +270,13 @@ simRemoteApi.start(19999)
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
 <h2>week12</h2>
 <h3>topic</h3>
+<p>題目 </p>
 <p></p>
-<p></p>
-<h3>影片直播</h3>
+<p>下載 RoboDK 5.2.2 及pick and place</p>
+<p> <a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) - 可用於工業機械手臂離線設計與模擬</span></p>
+<p><span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></span></p>
+<p><span>開啟 Pick and Place 專案檔案後, Python 以 pip install robodk 後, 可以開啟下列控制程式, 逐一由機械手臂將球從 Table1 取放至 Table2, 圓球排列方式採 </span><a href="https://en.wikipedia.org/wiki/Square_pyramid">Square Pyramid</a><span>. 使用者可精確送出各球座標位置, 導引機械手臂取放圓球</span></p>
+<p></p><h3>影片直播</h3>
 <p>第一支</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/DxpgK7z7EH0" title="YouTube video player" width="560"></iframe></p>
 <p>第二支</p>
