--- a/content/week13.html
+++ b/content/week13.html
@@ -133,24 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">leo << <a href='leo.html'>Previous</a> <a href='edit Reveal.html'>Next</a> >> edit Reveal<br /><h1>edit blog</h1>
-<p>一開始你的leo是黑色的， 如果你想換成白色的</p>
-<p>step1. 到File裡的 Open-Outline</p>
-<p><img alt="" height="494" src="./../images/螢幕擷取畫面 2021-03-08 001936.png" width="317"/></p>
-<p>Step2.進到你的tmp<span>→cd2021→config</span></p>
-<p><img alt="" height="350" src="./../images/1615134022081.jpg" width="554"/></p>
-<p>Step3. touch pelican.leo</p>
-<p><img alt="" height="347" src="./../images/1615134032445.jpg" width="553"/></p>
-<p></p>
-<p>新建disqus</p>
-<p><img alt="" height="549" src="./../images/1615132385371.jpg" width="560"/></p>
-<p></p>
-<p>改設定到遠端的pelican 劃紅線的是需要改的設定  discqus sitename 填你新建disqus的名字(Webside name)</p>
-<p><img alt="" height="313" src="./../images/1615133741671.jpg" width="563"/></p>
-<p>指令 @others 就是可以當編輯這個網頁要編輯下一張的時候，下一張的開頭位置會是你上一張結尾的後面</p>
-<p>可以繼續編排不會亂</p>
-<p></p>
-<br />leo << <a href='leo.html'>Previous</a> <a href='edit Reveal.html'>Next</a> >> edit Reveal</div>
+    <div id="tipue_search_content">影片直播 << <a href='影片直播.html'>Previous</a> <a href='week14.html'>Next</a> >> week14<br /><h1>week13</h1>
+<h4>RoboDK 機械手臂 Pick and Place Python API 程式:</h4>
+<p><a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) </span></p>
+<p><span>完整的 </span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></p>
+<p><a href="https://drive.google.com/file/d/1WRX6i6cA_f8ER6kN8yNwt1sdZTLMhl4J/view?usp=sharing">下載 CoppeliaSim 4.1.0 可攜程式</a><span><span> </span>(使用舊版的) </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sQ6QacdSuYY" title="YouTube video player" width="560"></iframe></p>
+<br />影片直播 << <a href='影片直播.html'>Previous</a> <a href='week14.html'>Next</a> >> week14</div>
         
     <!-- footer -->
       <div class="container">
