--- a/content/week14.html
+++ b/content/week14.html
@@ -134,6 +134,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week13 << <a href='week13.html'>Previous</a> <a href='week15.html'>Next</a> >> week15<br /><h1>week14</h1>
+<p>創造第二個雲端 Gitlab(第二次備份)</p>
+<h4>Gitlab 同步</h4>
+<p>要利用 Gitlab 同步位於 Github 上的 CMSiMDE 倉儲與 Github Pages 網頁, 需要注意以下兩個要點:</p>
+<ol>
+<li>完成<span> </span><a href="https://gitlab.com/users/sign_up">https://gitlab.com/users/sign_up</a><span> </span>帳號申請與驗證.</li>
+<li>在原先 Github 倉儲中增加一個 .gitlab-ci.yml 檔案, 目的是用來產生與倉儲對應的 Gitlab Pages 網站.</li>
+</ol>
+<p></p>
+<p></p>
+<p></p>
 <p></p>
 <br />week13 << <a href='week13.html'>Previous</a> <a href='week15.html'>Next</a> >> week15</div>
         
