--- a/content/Film.html
+++ b/content/Film.html
@@ -133,12 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week8 << <a href='week8.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3<br /><h1>week9</h1>
+    <div id="tipue_search_content">Gogs << <a href='Gogs.html'>Previous</a> <br /><h1>Film</h1>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt</a></p>
-<br />week8 << <a href='week8.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3</div>
+<p></p><br />Gogs << <a href='Gogs.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
