--- a/content/Gogs.html
+++ b/content/Gogs.html
@@ -133,12 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week8 << <a href='week8.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3<br /><h1>week9</h1>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt</a></p>
-<br />week8 << <a href='week8.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3</div>
+    <div id="tipue_search_content">week15 << <a href='week15.html'>Previous</a> <a href='Film.html'>Next</a> >> Film<br /><h1>Gogs</h1>
+<br />week15 << <a href='week15.html'>Previous</a> <a href='Film.html'>Next</a> >> Film</div>
         
     <!-- footer -->
       <div class="container">
